RESOLVED FIXED296852
[writing-mode] Fix css/css-writing-modes/inline-block-alignment-003.xht (005,007) and table-alignment-003 and 005
https://bugs.webkit.org/show_bug.cgi?id=296852
Summary [writing-mode] Fix css/css-writing-modes/inline-block-alignment-003.xht (005,...
alan
Reported 2025-08-02 19:26:47 PDT
ssia
Attachments
Patch (21.96 KB, patch)
2025-08-02 19:38 PDT, alan
no flags
[fast-cq]Patch (19.25 KB, patch)
2025-08-05 07:50 PDT, alan
ews-feeder: commit-queue-
alan
Comment 1 2025-08-02 19:38:17 PDT
alan
Comment 2 2025-08-05 07:50:32 PDT
Created attachment 476286 [details] [fast-cq]Patch
EWS
Comment 3 2025-08-05 09:28:02 PDT
Committed 298236@main (68ed2f485299): <https://commits.webkit.org/298236@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 476286 [details].
Radar WebKit Bug Importer
Comment 4 2025-08-05 09:34:12 PDT
Note You need to log in before you can comment on or make changes to this bug.