[writing-mode] Fix css/css-writing-modes/inline-block-alignment-003.xht (005,007) and table-alignment-003 and 005 https://bugs.webkit.org/show_bug.cgi?id=296852

Reviewed by Antti Koivisto.

1. lastLineLogicalBaseline should return a value relative to the logical top of the box even
when the box's lines are inverted (vertical-lr).
This ensures that any baseline function simply returns the distance from the logical top, regardless of the writing mode.
2. Collapse lastLinePhysicalBaseline and lastLineLogicalBaseline into one function
and call it lastLineBaseline (and also rename firstLinePhysicalBaseline to firstLineBaseline)
3. When IFC takes a box's baseline right before running inline layout, flip it over for inverted lines when applicable (this is what we used to do at #1).

* LayoutTests/TestExpectations:
* LayoutTests/fast/text/emphasis-overlap-expected.txt:
* LayoutTests/fast/writing-mode/flipped-blocks-inline-map-local-to-container-expected.html:
* LayoutTests/fast/writing-mode/flipped-blocks-inline-map-local-to-container.html:
* Source/WebCore/layout/integration/LayoutIntegrationBoxGeometryUpdater.cpp:
(WebCore::LayoutIntegration::baselineForBox):
(WebCore::LayoutIntegration::setIntegrationBaseline):
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::firstLineBaseline const):
(WebCore::LayoutIntegration::LineLayout::lastLineBaseline const):
(WebCore::LayoutIntegration::LineLayout::baselineForLine const):
(WebCore::LayoutIntegration::LineLayout::firstLinePhysicalBaseline const): Deleted.
(WebCore::LayoutIntegration::LineLayout::lastLinePhysicalBaseline const): Deleted.
(WebCore::LayoutIntegration::LineLayout::physicalBaselineForLine const): Deleted.
(WebCore::LayoutIntegration::LineLayout::lastLineLogicalBaseline const): Deleted.
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.h:
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::firstLineBaseline const):
(WebCore::RenderBlockFlow::lastLineBaseline const):

Canonical link: https://commits.webkit.org/298236@main